--- a/index.ipynb
+++ b/index.ipynb
@@ -529,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u\n",
+    "unique_countries = list(unique_co)\n",
     "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
