Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -525,11 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(unique_co)\n",
+    "unique_countries = list(unique_countries)\n",
+    "\n",
+    "len(coun)\n",
     "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
