Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,9 @@
    "source": [
     "unique_countries = list(unique_countries)\n",
     "\n",
-    "len(coun)\n",
+    "len(countries)\n",
+    "\n",
+    "len(uniqu)\n",
     "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
