Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
     "\n",
     "len(countries)\n",
     "\n",
-    "len(uniqu)\n",
+    "len(unique_countries)\n",
     "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
