Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,22 +497,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "13"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(unique_countries)# ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
+    "len(countries)# ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
    ]
   },
